--- a/WebApplication2/Views/Home/Index.cshtml
+++ b/WebApplication2/Views/Home/Index.cshtml
@@ -62,8 +62,8 @@
                                 {
                                     <li><a class="dropdown-item" asp-controller="home" asp-action="Category">@category.CategoryName</a></li>
                                 }
-                  @* <li><a class="dropdown-item" asp-controller="home" asp-action="Category">Another action</a></li>
-                  <li><a class="dropdown-item" asp-controller="home" asp-action="Category">Something else here</a></li> *@
+                   <li><a class="dropdown-item" asp-controller="home" asp-action="Category">Another action</a></li>
+                  <li><a class="dropdown-item" asp-controller="home" asp-action="Category">Something else here</a></li> 
                 </ul>
               </li>
 
