fixed,layout dorpdown menu

--- a/WebApplication2/Views/Home/Search.cshtml
+++ b/WebApplication2/Views/Home/Search.cshtml
@@ -36,14 +36,14 @@
 
 <body>
 
-                    <!-- ***** Preloader Start ***** -->
+                  @*   <!-- ***** Preloader Start ***** -->
                     <div id="preloader">
                         <div class="jumper">
                             <div></div>
                             <div></div>
                             <div></div>
                         </div>
-                    </div>  
+                    </div>   *@
                     <!-- ***** Preloader End ***** -->
 
                     <!-- Header -->
