--- a/WebApplication2/Views/Instructor/AddCourse.cshtml
+++ b/WebApplication2/Views/Instructor/AddCourse.cshtml
@@ -6,10 +6,10 @@
     var LanguageList = new SelectList(ViewBag.Languages, "LanguageId", "Name");
 }
 
-<!DOCTYPE 
 
-html>
-<html lang="en">
+
+
+
 
 <head>
 
@@ -109,13 +109,13 @@ html>
 
 <body>
 
-    <div id="preloader">
+    @* <div id="preloader">
         <div class="jumper">
             <div></div>
             <div></div>
             <div></div>
         </div>
-    </div>
+    </div> *@
 
     <header class="">
         <nav class="navbar navbar-expand-lg">
@@ -488,31 +488,31 @@ html>
                     @* </form> *@
                 </div>
             </div>
-            <footer class="footer_area section_gap_top">
-                <div class="container">
-                    <div class="row single-footer-widget">
-                        <div class="col-lg-6 col-md-6 col-sm-12">
-                            <div class="copy_right_text">
-                                <p>
-                                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                                    All Copyrights &copy reserved
-                                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                                </p>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="left-content">
-                                <ul class="social-icons">
-                                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-behance"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
+    <footer class="footer_area section_gap_top">
+        <div class="container">
+            <div class="row single-footer-widget">
+                <div class="col-lg-6 col-md-6 col-sm-12">
+                    <div class="copy_right_text">
+                        <p>
+                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                            All Copyrights &copy reserved
+                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                        </p>
                     </div>
                 </div>
-            </footer>
+                <div class="col-md-4">
+                    <div class="left-content">
+                        <ul class="social-icons">
+                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                            <li><a href="#"><i class="fa fa-behance"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
         </div>
 
@@ -689,4 +689,3 @@ html>
 
   </body>
 
-</html>
