--- a/WebApplication2/Views/Home/Course.cshtml
+++ b/WebApplication2/Views/Home/Course.cshtml
@@ -93,6 +93,9 @@
         </nav>
     </header> *@
 
+@{
+    Layout = "_Layout";
+}
     <!-- Page Content -->
 
     <div class="banner header-text">
