--- a/WebApplication2/Views/Home/ForInstructor.cshtml
+++ b/WebApplication2/Views/Home/ForInstructor.cshtml
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+﻿@* <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -57,8 +57,11 @@
             </div>
 
         </nav>
-    </header>
+    </header> *@
 
+@{
+    Layout = "_Layout";
+} 
 
     <div class="banner header-text">
         <div class="owl-banner owl-carousel">
@@ -229,7 +232,7 @@
                     </fieldset>
                 </div>
             </div>
-            <footer class="footer_area section_gap_top">
+@*             <footer class="footer_area section_gap_top">
                 <div class="container">
                     <div class="row single-footer-widget">
                         <div class="col-lg-6 col-md-6 col-sm-12">
@@ -253,7 +256,7 @@
                         </div>
                     </div>
                 </div>
-            </footer>
+            </footer> *@
 
         </div>
 
@@ -277,7 +280,7 @@
 
 
 
-    <!-- Bootstrap core JavaScript -->
+@*     <!-- Bootstrap core JavaScript -->
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/lib/jquery/dist/jquery.js"></script>
@@ -289,7 +292,7 @@
     <script src="~/js/site1.js"></script>
     <script src="~/js/site2.js"></script>
     <script src="~/js/site3.js"></script>
-    <script src="~/js/site4.js"></script>
+    <script src="~/js/site4.js"></script> *@
 
 
     <script language="text/Javascript">
@@ -303,7 +306,7 @@
         }
     </script>
 
-
+@* 
 </body>
 
-</html>
+</html> *@
