--- a/WebApplication2/Views/Home/Index.cshtml
+++ b/WebApplication2/Views/Home/Index.cshtml
@@ -99,7 +99,9 @@
         
       </nav>
     </header> *@
-
+@{
+    Layout = "_Layout";
+}
     <!-- Page Content -->
     <!-- Banner Starts Here -->
     <div class="banner header-text">
