--- a/WebApplication2/Views/Home/SignUp.cshtml
+++ b/WebApplication2/Views/Home/SignUp.cshtml
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+﻿@* <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -58,15 +58,13 @@
             </div>
 
         </nav>
-    </header>
+    </header> *@
 
 
     <div class="banner header-text">
         <div class="owl-banner owl-carousel">
         </div>
     </div>
-
-
 
 
     <div class="send-message">
@@ -173,7 +171,8 @@
                     </div>
                 </div>
             </div>
-            <footer class="footer_area section_gap_top">
+
+@*             <footer class="footer_area section_gap_top">
                 <div class="container">
                     <div class="row single-footer-widget">
                         <div class="col-lg-6 col-md-6 col-sm-12">
@@ -197,7 +196,7 @@
                         </div>
                     </div>
                 </div>
-            </footer>
+            </footer> *@
 
         </div>
 
@@ -221,7 +220,7 @@
 
 
 
-    <!-- Bootstrap core JavaScript -->
+@*     <!-- Bootstrap core JavaScript -->
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/lib/jquery/dist/jquery.js"></script>
@@ -251,3 +250,4 @@
 </body>
 
 </html>
+ *@
