--- a/WebApplication2/Views/Student/Index.cshtml
+++ b/WebApplication2/Views/Student/Index.cshtml
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+﻿@* <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -94,7 +94,11 @@
           </div>
         
       </nav>
-    </header>
+    </header> *@
+
+@{
+    Layout = "_StudentLayout";
+}
 
     <!-- Page Content -->
     <!-- Banner Starts Here -->
@@ -319,7 +323,7 @@
       </div>
     </div>
     <!-- Recent Reviews Ends Here -->
-
+@*
    <footer class="footer_area section_gap_top">
       <div class="container">
         <div class="row single-footer-widget">
@@ -345,7 +349,7 @@
     </footer>
 
 
-    <!-- Bootstrap core JavaScript -->
+     <!-- Bootstrap core JavaScript -->
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/lib/jquery/dist/jquery.js"></script>
@@ -374,4 +378,4 @@
 
   </body>
 
-</html>
+</html> *@
