--- a/WebApplication2/Views/Home/Login.cshtml
+++ b/WebApplication2/Views/Home/Login.cshtml
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+﻿@* <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -59,9 +59,11 @@
 
         </nav>
     </header>
-
+ *@
     <!-- Page Content -->
-
+@{
+    Layout = "_Layout";
+}
     <div class="banner header-text">
         <div class="owl-banner owl-carousel">
         </div>
@@ -150,7 +152,7 @@
 
 
 
-
+@* 
     <!-- END SEARCH RESULT -->
     <!-- Bootstrap core JavaScript -->
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
@@ -168,7 +170,7 @@
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
+ *@
     <script>
         $('.btn').click(function () {
             $('.collapse-content').toggle();
@@ -176,6 +178,7 @@
     </script>
 
 
-</body>
+@* </body>
 
 </html>
+ *@
