--- a/WebApplication2/Views/Home/Search.cshtml
+++ b/WebApplication2/Views/Home/Search.cshtml
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+﻿@* <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -35,7 +35,7 @@
  
 
 <body>
-
+ *@
                   @*   <!-- ***** Preloader Start ***** -->
                     <div id="preloader">
                         <div class="jumper">
@@ -47,7 +47,7 @@
                     <!-- ***** Preloader End ***** -->
 
                     <!-- Header -->
-              <header class="">
+@*               <header class="">
               <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
          
@@ -94,10 +94,12 @@
                   </div>
         
               </nav>
-            </header>
+            </header> *@
 
                     <!-- Page Content -->
-
+@{
+    Layout = "_Layout";
+}
                       <div class="banner header-text">
                          <div class="owl-banner owl-carousel">
                           
@@ -432,7 +434,7 @@
 
 
  
-                    <!-- Bootstrap core JavaScript -->
+@*                     <!-- Bootstrap core JavaScript -->
                     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
                     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
                     <script src="~/lib/jquery/dist/jquery.js"></script>
@@ -447,12 +449,12 @@
                     <script src="~/js/site4.js"></script>
 
                     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-                    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+                    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> *@
                     <script>
                     $('.btn').click(function() {
                       $('.collapse-content').toggle();
                     });
                     </script>           
-  </body>
+@*   </body>
 
-  </html>
+  </html> *@
