--- a/WebApplication2/Views/Instructor/AddCourse.cshtml
+++ b/WebApplication2/Views/Instructor/AddCourse.cshtml
@@ -13,7 +13,7 @@
 
 <head>
 
-    <meta charset="utf-8">
+@*     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -35,7 +35,7 @@
     <link href="~/css/site2.css" rel="stylesheet">
     <link href="~/css/site3.css" rel="stylesheet">
     <link href="~/css/site4.css" rel="stylesheet">
-    <link href="~/css/StyleSheet.css" rel="stylesheet">
+    <link href="~/css/StyleSheet.css" rel="stylesheet"> *@
     <style>
 
 
@@ -107,9 +107,12 @@
 </head>
 
 
-<body>
 
-    @* <div id="preloader">
+
+    @*
+        <body>
+            
+        <div id="preloader">
         <div class="jumper">
             <div></div>
             <div></div>
@@ -117,7 +120,7 @@
         </div>
     </div> *@
 
-    <header class="">
+@*     <header class="">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
 
@@ -181,8 +184,11 @@
             </div>
 
         </nav>
-    </header>
+    </header> *@
 
+@{
+    Layout = "_InstructorLayout";
+}
 
     <div class="banner header-text">
         <div class="owl-banner owl-carousel">
@@ -488,7 +494,7 @@
                     @* </form> *@
                 </div>
             </div>
-    <footer class="footer_area section_gap_top">
+@*     <footer class="footer_area section_gap_top">
         <div class="container">
             <div class="row single-footer-widget">
                 <div class="col-lg-6 col-md-6 col-sm-12">
@@ -512,7 +518,7 @@
                 </div>
             </div>
         </div>
-    </footer>
+    </footer> *@
 
         </div>
 
@@ -536,7 +542,7 @@
 
 
 
-<!-- Bootstrap core JavaScript -->
+@* <!-- Bootstrap core JavaScript -->
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="~/lib/jquery/dist/jquery.js"></script>
@@ -548,7 +554,7 @@
 <script src="~/js/site1.js"></script>
 <script src="~/js/site2.js"></script>
 <script src="~/js/site3.js"></script>
-<script src="~/js/site4.js"></script>
+<script src="~/js/site4.js"></script> *@
     <script>
         $(document).ready(function () {
             // Handle subcategory selection and update the display and hidden input
@@ -675,7 +681,7 @@
             $('.selectpicker').selectpicker();
         });
     </script> *@
-<script language="text/Javascript">
+@* <script language="text/Javascript">
     cleared[0] = cleared[1] = cleared[2] = 0; //set a cleared flag for each field
     function clearField(t) {                   //declaring the array outside of the
         if (!cleared[t.id]) {                      // function makes it static and global
@@ -687,5 +693,5 @@
 </script>
    
 
-  </body>
+  </body> *@
 
