--- a/WebApplication2/Views/Instructor/Index.cshtml
+++ b/WebApplication2/Views/Instructor/Index.cshtml
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+﻿@* <!DOCTYPE html>
 <html lang="en">
 
   <head>
@@ -100,8 +100,11 @@
           </div>
         
       </nav>
-    </header>
+    </header> *@
 
+@{
+    Layout = "_InstructorLayout";
+}
     <!-- Page Content -->
     <!-- Banner Starts Here -->
     <div class="banner header-text">
@@ -326,7 +329,7 @@
     </div>
     <!-- Recent Reviews Ends Here -->
 
-    <footer class="footer_area section_gap_top">
+@*     <footer class="footer_area section_gap_top">
       <div class="container">
         <div class="row single-footer-widget">
           <div class="col-lg-6 col-md-6 col-sm-12">
@@ -379,4 +382,4 @@
 
   </body>
 
-</html>
+</html> *@
