--- a/WebApplication2/Views/Instructor/MyCourses.cshtml
+++ b/WebApplication2/Views/Instructor/MyCourses.cshtml
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+﻿@* <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -106,21 +106,28 @@
           </div>
         
       </nav>
-    </header>
+    </header> *@
+
+@{
+    Layout = "_InstructorLayout";
+}
                     <!-- Page Content -->
                       <div class="banner header-text">
                          <div class="owl-banner owl-carousel">
                           </div>
                         </div>  
                   <!-- BEGIN SEARCH RESULTf -->
-         <div class="col-md-12 my-3">
+<div class="col-md-12 my-3">
+    <div class="container">
+       
+@*        
              <div class="grid search">
                 <div class="grid-body">
                     <div class="row">
 
       
-             <div class="col-md-3">
-                 <div class="container">
+           
+                  *@
 
                    <!-- <h2 class="grid-title"> MyCourses</h2>
                      <hr>
@@ -138,13 +145,10 @@
                         <a class="newlink" href="index.html">Subcategory  </a>
                    </div>                                  -->
 
-
-                    </div>
-                      </div>
                           <!-- END FILTERS -->
 
                           <!-- BEGIN RESULT -->
-       <div class="col-md-9 my-3">
+       <div class="col-md-12 my-3">
                 <div class="padding">
                  <div class="row">
                             <!-- BEGIN TABLE RESULT -->
@@ -275,9 +279,10 @@
 
 
 
-                        </div>
-                      </div>
-                         <footer class="footer_area section_gap_top">
+                         </div>
+                       
+    </div>
+@*                          <footer class="footer_area section_gap_top">
                           <div class="container">
                             <div class="row single-footer-widget">
                               <div class="col-lg-6 col-md-6 col-sm-12">
@@ -299,18 +304,22 @@
                               </div>
                             </div>
                           </div>
-                        </footer>
+                        </footer> *@
                  
                   
-                           </div>
+@*                            </div>
                   </div>
                   </div>
-                  </div>
+                  </div> *@
+
+    
+    </div>
+</div>
                   <!-- END SEARCH RESULT -->
 
 
  
-                    <!-- Bootstrap core JavaScript -->
+@*                     <!-- Bootstrap core JavaScript -->
                     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
                     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
                     <script src="~/lib/jquery/dist/jquery.js"></script>
@@ -325,12 +334,12 @@
                     <script src="~/js/site4.js"></script>
 
                     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-                    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+                    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> *@
                     <script>
                     $('.btn').click(function() {
                       $('.collapse-content').toggle();
                     });
                     </script>           
-  </body>
+@*   </body>
 
-  </html>
+  </html> *@
