--- a/WebApplication2/Views/Instructor/Profile.cshtml
+++ b/WebApplication2/Views/Instructor/Profile.cshtml
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+﻿@* <!DOCTYPE html>
 <html>
 <head>
 
@@ -61,7 +61,11 @@
         </nav>
     </header>
 
+ *@
 
+@{
+    Layout = "_InstructorLayout";
+}
 
     <div class="banner header-text">
         <div class="owl-banner owl-carousel">
@@ -137,7 +141,7 @@
     </div>
 
 
-    <!-- Bootstrap core JavaScript -->
+@*     <!-- Bootstrap core JavaScript -->
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/lib/jquery/dist/jquery.js"></script>
@@ -149,7 +153,7 @@
     <script src="~/js/site1.js"></script>
     <script src="~/js/site2.js"></script>
     <script src="~/js/site3.js"></script>
-    <script src="~/js/site4.js"></script>
+    <script src="~/js/site4.js"></script> *@
 
     <script type='text/javascript'>
         var myLink = document.querySelector('a[href="#"]');
@@ -157,5 +161,5 @@
             e.preventDefault();
         });</script>
 
-</body>
-</html>
+@* </body>
+</html> *@
