--- a/WebApplication2/Views/Student/Review.cshtml
+++ b/WebApplication2/Views/Student/Review.cshtml
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+﻿@* <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -93,7 +93,11 @@
             </div>
 
         </nav>
-    </header>
+    </header> *@
+
+@{
+    Layout = "_StudentLayout";
+}
     <!-- Page Content -->
     <div class="banner header-text">
         <div class="owl-banner owl-carousel">
@@ -354,7 +358,7 @@
 
 
             </div>
-            <footer class="footer_area section_gap_top">
+@*             <footer class="footer_area section_gap_top">
                 <div class="container-fluid">
                     <div class="row single-footer-widget">
                         <div class="col-lg-6 col-md-6 col-sm-12">
@@ -378,7 +382,7 @@
                         </div>
                     </div>
                 </div>
-    </footer>
+    </footer> *@
         </div>
 
     </div>
@@ -387,7 +391,7 @@
 
 
     
-    <!-- END SEARCH RESULT -->
+@*     <!-- END SEARCH RESULT -->
     <!-- Bootstrap core JavaScript -->
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
@@ -403,12 +407,12 @@
     <script src="~/js/site4.js"></script>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> *@
     <script>
         $('.btn').click(function () {
             $('.collapse-content').toggle();
         });
     </script>
-</body>
+@* </body>
 
-</html>
+</html> *@
