--- a/WebApplication2/Views/Home/Category.cshtml
+++ b/WebApplication2/Views/Home/Category.cshtml
@@ -103,6 +103,9 @@ f
               </nav>
             </header> *@
 
+@{
+    Layout = "_Layout";
+}      
                     <!-- Page Content -->
                       <div class="banner header-text">
                          <div class="owl-banner owl-carousel">
