--- a/WebApplication2/Views/Shared/_StudentLayout.cshtml
+++ b/WebApplication2/Views/Shared/_StudentLayout.cshtml
@@ -32,7 +32,7 @@
     <link href="~/css/site2.css" rel="stylesheet">
     <link href="~/css/site3.css" rel="stylesheet">
     <link href="~/css/site4.css" rel="stylesheet">
-    <link href="~/css/StyleSheet.css" rel="stylesheet">
+    @* <link href="~/css/StyleSheet.css" rel="stylesheet"> *@
 
     <style>
         .dropdown:hover .dropdown-menu {
@@ -60,7 +60,7 @@
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
 
-                <a class="navbar-brand" href="index.html">
+                <a class="navbar-brand" asp-controller="student" asp-action="index">
                     <h2><em>L</em>earn Consult</h2>
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
