--- a/WebApplication2/Views/Shared/_Layout.cshtml
+++ b/WebApplication2/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
     <link href="~/css/site3.css" rel="stylesheet">
     <link href="~/css/site4.css" rel="stylesheet">
 
-    <style>
+    @* <style>
         .dropdown:hover .dropdown-menu {
             display: block;
         }
@@ -41,7 +41,7 @@
         .nav-tabs .dropdown-menu, .nav-pills .dropdown-menu, .navbar .dropdown-menu {
             margin-top: 0;
         }
-    </style>
+    </style> *@
 </head>
 
 <body>
